--- a/index.html
+++ b/index.html
@@ -1,137 +1,275 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<style>
-body {
-    font-family: Arial, sans-serif;
-    background-color: #F0F4F8; /* TailwindUI Gray 100 */
-    margin: 0;
-}
-.container {
-    padding: 24px;
-    max-width: 768px;
-    margin: auto;
-    background-color: #FFFFFF; /* White background for content area */
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); /* TailwindUI Shadow */
-}
-p {
-    font-size: 1rem; /* TailwindUI base */
-    line-height: 1.75rem; /* TailwindUI leading-7 */
-    color: #1A202C; /* TailwindUI gray-900 */
-    margin: 1.5rem 0; /* TailwindUI mt-6 */
-}
-h1 {
-    font-size: 1.875rem; /* TailwindUI text-3xl */
-    font-weight: 700; /* TailwindUI font-bold */
-    letter-spacing: -0.01562em; /* TailwindUI tracking-tight */
-    color: #1A202C; /* TailwindUI gray-900 */
-    margin: 2rem 0 1rem 0; /* TailwindUI mt-8 */
-}
-h2 {
-    font-size: 1.5rem; /* TailwindUI text-2xl */
-    font-weight: 700; /* TailwindUI font-bold */
-    letter-spacing: -0.01562em; /* TailwindUI tracking-tight */
-    color: #1A202C; /* TailwindUI gray-900 */
-    margin: 2rem 0 1rem 0; /* TailwindUI mt-8 */
-}
-h3, h4, h5, h6 {
-    font-weight: 600; /* TailwindUI font-semibold */
-    margin: 2rem 0 1rem 0; /* TailwindUI mt-8 */
-}
-ul {
-    list-style-type: disc; /* TailwindUI list-disc */
-    margin: 1.5rem 0; /* TailwindUI mt-6 */
-    padding-left: 1rem; /* TailwindUI pl-4 */
-    color: #1A202C; /* TailwindUI gray-900 */
-}
-li {
-    margin: 0.5rem 0; /* TailwindUI mt-2 */
-    line-height: 1.75rem; /* TailwindUI leading-7 */
-}
-blockquote {
-    font-weight: 500; /* TailwindUI font-semibold */
-    line-height: 1.75rem; /* TailwindUI leading-7 */
-    color: #1A202C; /* TailwindUI gray-900 */
-    margin: 2rem 0; /* TailwindUI mt-8 */
-    padding: 1rem; /* TailwindUI p-4 */
-    border-left: 4px solid #7C3AED; /* TailwindUI border border-indigo-600 */
-    background-color: #EDF2F7; /* TailwindUI bg-gray-100 */
-}
-img {
-    width: 100%; /* TailwindUI w-full */
-    border-radius: 15px; /* TailwindUI rounded-xl */
-    display: block; /* TailwindUI block */
-    margin: 1.5rem 0; /* TailwindUI mt-6 */
-}
-figcaption {
-    font-size: 0.875rem; /* TailwindUI text-sm */
-    line-height: 1.5rem; /* TailwindUI leading-6 */
-    color: #718096; /* TailwindUI gray-600 */
-    display: flex; /* TailwindUI flex */
-    gap: 0.5rem; /* TailwindUI gap-x-2 */
-    margin-top: 1rem; /* TailwindUI mt-4 */
-}
-a {
-    color: #4C51BF; /* TailwindUI text-indigo-600 */
-    text-decoration: none; /* TailwindUI no-underline */
-}
-a:hover {
-    text-decoration: underline; /* TailwindUI underline */
-}
-table {
-    width: 100%; /* TailwindUI w-full */
-    border-collapse: collapse; /* TailwindUI border-collapse */
-    margin: 1.5rem 0; /* TailwindUI mt-6 */
-}
-table, th, td {
-    border: 1px solid #E2E8F0; /* TailwindUI border border-gray-300 */
-}
-th, td {
-    padding: 8px; /* TailwindUI p-2 */
-    text-align: left; /* TailwindUI text-left */
-}
-th {
-    background-color: #EDF2F7; /* TailwindUI bg-gray-100 */
-}
-code {
-    font-family: monospace; /* TailwindUI font-mono */
-    background-color: #EDF2F7; /* TailwindUI bg-gray-100 */
-    padding: 2px 5px; /* TailwindUI p-1 */
-    border-radius: 4px; /* TailwindUI rounded-md */
-}
-pre {
-    font-family: monospace; /* TailwindUI font-mono */
-    background-color: #EDF2F7; /* TailwindUI bg-gray-100 */
-    padding: 10px; /* TailwindUI p-2.5 */
-    border-radius: 4px; /* TailwindUI rounded-md */
-    margin: 1.5rem 0; /* TailwindUI mt-6 */
-}
-hr {
-    border: 0; /* TailwindUI border-0 */
-    height: 1px; /* TailwindUI h-0.5 */
-    background-color: #E2E8F0; /* TailwindUI bg-gray-300 */
-    margin: 2rem 0; /* TailwindUI mt-8 */
-}
-</style>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #F0F4F8;
+      /* TailwindUI Gray 100 */
+      margin: 0;
+    }
+
+    .container {
+      padding: 24px;
+      max-width: 768px;
+      margin: auto;
+      background-color: #FFFFFF;
+      /* White background for content area */
+      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+      /* TailwindUI Shadow */
+    }
+
+    p {
+      font-size: 1rem;
+      /* TailwindUI base */
+      line-height: 1.75rem;
+      /* TailwindUI leading-7 */
+      color: #1A202C;
+      /* TailwindUI gray-900 */
+      margin: 1.5rem 0;
+      /* TailwindUI mt-6 */
+    }
+
+    h1 {
+      font-size: 1.875rem;
+      /* TailwindUI text-3xl */
+      font-weight: 700;
+      /* TailwindUI font-bold */
+      letter-spacing: -0.01562em;
+      /* TailwindUI tracking-tight */
+      color: #1A202C;
+      /* TailwindUI gray-900 */
+      margin: 2rem 0 1rem 0;
+      /* TailwindUI mt-8 */
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      /* TailwindUI text-2xl */
+      font-weight: 700;
+      /* TailwindUI font-bold */
+      letter-spacing: -0.01562em;
+      /* TailwindUI tracking-tight */
+      color: #1A202C;
+      /* TailwindUI gray-900 */
+      margin: 2rem 0 1rem 0;
+      /* TailwindUI mt-8 */
+    }
+
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-weight: 600;
+      /* TailwindUI font-semibold */
+      margin: 2rem 0 1rem 0;
+      /* TailwindUI mt-8 */
+    }
+
+    ul {
+      list-style-type: disc;
+      /* TailwindUI list-disc */
+      margin: 1.5rem 0;
+      /* TailwindUI mt-6 */
+      padding-left: 1rem;
+      /* TailwindUI pl-4 */
+      color: #1A202C;
+      /* TailwindUI gray-900 */
+    }
+
+    li {
+      margin: 0.5rem 0;
+      /* TailwindUI mt-2 */
+      line-height: 1.75rem;
+      /* TailwindUI leading-7 */
+    }
+
+    blockquote {
+      font-weight: 500;
+      /* TailwindUI font-semibold */
+      line-height: 1.75rem;
+      /* TailwindUI leading-7 */
+      color: #1A202C;
+      /* TailwindUI gray-900 */
+      margin: 2rem 0;
+      /* TailwindUI mt-8 */
+      padding: 1rem;
+      /* TailwindUI p-4 */
+      border-left: 4px solid #7C3AED;
+      /* TailwindUI border border-indigo-600 */
+      background-color: #EDF2F7;
+      /* TailwindUI bg-gray-100 */
+    }
+
+    img {
+      width: 100%;
+      /* TailwindUI w-full */
+      border-radius: 15px;
+      /* TailwindUI rounded-xl */
+      display: block;
+      /* TailwindUI block */
+      margin: 1.5rem 0;
+      /* TailwindUI mt-6 */
+    }
+
+    figcaption {
+      font-size: 0.875rem;
+      /* TailwindUI text-sm */
+      line-height: 1.5rem;
+      /* TailwindUI leading-6 */
+      color: #718096;
+      /* TailwindUI gray-600 */
+      display: flex;
+      /* TailwindUI flex */
+      gap: 0.5rem;
+      /* TailwindUI gap-x-2 */
+      margin-top: 1rem;
+      /* TailwindUI mt-4 */
+    }
+
+    a {
+      color: #4C51BF;
+      /* TailwindUI text-indigo-600 */
+      text-decoration: none;
+      /* TailwindUI no-underline */
+    }
+
+    a:hover {
+      text-decoration: underline;
+      /* TailwindUI underline */
+    }
+
+    table {
+      width: 100%;
+      /* TailwindUI w-full */
+      border-collapse: collapse;
+      /* TailwindUI border-collapse */
+      margin: 1.5rem 0;
+      /* TailwindUI mt-6 */
+    }
+
+    table,
+    th,
+    td {
+      border: 1px solid #E2E8F0;
+      /* TailwindUI border border-gray-300 */
+    }
+
+    th,
+    td {
+      padding: 8px;
+      /* TailwindUI p-2 */
+      text-align: left;
+      /* TailwindUI text-left */
+    }
+
+    th {
+      background-color: #EDF2F7;
+      /* TailwindUI bg-gray-100 */
+    }
+
+    code {
+      font-family: monospace;
+      /* TailwindUI font-mono */
+      background-color: #EDF2F7;
+      /* TailwindUI bg-gray-100 */
+      padding: 2px 5px;
+      /* TailwindUI p-1 */
+      border-radius: 4px;
+      /* TailwindUI rounded-md */
+    }
+
+    pre {
+      font-family: monospace;
+      /* TailwindUI font-mono */
+      background-color: #EDF2F7;
+      /* TailwindUI bg-gray-100 */
+      padding: 10px;
+      /* TailwindUI p-2.5 */
+      border-radius: 4px;
+      /* TailwindUI rounded-md */
+      margin: 1.5rem 0;
+      /* TailwindUI mt-6 */
+    }
+
+    hr {
+      border: 0;
+      /* TailwindUI border-0 */
+      height: 1px;
+      /* TailwindUI h-0.5 */
+      background-color: #E2E8F0;
+      /* TailwindUI bg-gray-300 */
+      margin: 2rem 0;
+      /* TailwindUI mt-8 */
+    }
+
+    .footer {
+      text-align: center;
+      color: #718096;
+      font-size: 0.75rem;
+      margin: 2rem 0;
+    }
+
+    .footer a {
+      color: #718096;
+      text-decoration: none;
+    }
+  </style>
 
 </head>
+
 <body>
-<div class="container">
+  <div class="container">
+    <h5>INTRODUCING</h5>
     <h1>JavaScript for Beginners</h1>
-    <p>Aliquet nec orci mattis amet quisque ullamcorper neque, nibh sem. At arcu, sit dui mi, nibh dui, diam eget aliquam. Quisque id at vitae feugiat egestas ac. Diam nulla orci at in viverra scelerisque eget. Eleifend egestas fringilla sapien.</p>
-    <blockquote>
-        “Vel ultricies morbi odio facilisi ultrices accumsan donec lacus purus. Lectus nibh ullamcorper ac dictum justo in euismod. Risus aenean ut elit massa. In amet aliquet eget cras. Sem volutpat enim tristique.”
-        <br>
-        – Maria Hill, Marketing Manager
-    </blockquote>
+    <p>Aliquet nec orci mattis amet quisque ullamcorper neque, nibh sem. At arcu, sit dui mi, nibh dui, diam eget
+      aliquam.
+      Quisque id at vitae feugiat egestas ac. Diam nulla orci at in viverra scelerisque eget. Eleifend egestas fringilla
+      sapien.</p>
+    <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed
+      turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit. Faucibus
+      commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id.
+    </p>
     <ul>
-        <li><strong>Data types.</strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</li>
-        <li><strong>Loops.</strong> Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</li>
-        <li><strong>Events.</strong> Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</li>
+      <li><strong>Data types.</strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit
+        perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</li>
+      <li><strong>Loops.</strong> Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat
+        commodo.</li>
+      <li><strong>Events.</strong> Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi
+        lobortis.</li>
     </ul>
-    <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit.</p>
-    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&auto=format&fit=facearea&w=1310&h=873&q=80&facepad=3" alt="">
-    <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id.</p>
-</div>
+    <p>Et vitae blandit facilisi magna lacus commodo. Vitae sapien duis odio id et. Id blandit molestie auctor fermentum
+      dignissim. Lacus diam tincidunt ac cursus in vel. Mauris varius vulputate et ultrices hac adipiscing egestas.
+      Iaculis convallis ac tempor et ut. Ac lorem vel integer orci.</p>
+    <h2>From beginner to expert in 3 hours</h2>
+    <p>Id orci tellus laoreet id ac. Dolor, aenean leo, ac etiam consequat in. Convallis arcu ipsum urna nibh. Pharetra,
+      euismod vitae interdum mauris enim, consequat vulputate nibh. Maecenas pellentesque id sed tellus mauris, ultrices
+      mauris. Tincidunt enim cursus ridiculus mi. Pellentesque nam sed nullam sed diam turpis ipsum eu a sed convallis
+      diam.</p>
+    <blockquote>
+      <p>“Vel ultricies morbi odio facilisi ultrices accumsan donec lacus purus. Lectus nibh ullamcorper ac dictum justo
+        in euismod. Risus aenean ut elit massa. In amet aliquet eget cras. Sem volutpat enim tristique.”</p>
+    </blockquote>
+    <p><strong>Maria Hill</strong> – Marketing Manager</p>
+    <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed
+      turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit.</p>
+    <p><img
+        src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&amp;auto=format&amp;fit=facearea&amp;w=1310&amp;h=873&amp;q=80&amp;facepad=3"
+        alt=""></p>
+    <p>Faucibus commodo massa rhoncus, volutpat.</p>
+    <h2>Everything you need to get up and running</h2>
+    <p>Purus morbi dignissim senectus mattis adipiscing. Amet, massa quam varius orci dapibus volutpat cras. In amet eu
+      ridiculus leo sodales cursus tristique. Tincidunt sed tempus ut viverra ridiculus non molestie. Gravida quis
+      fringilla amet eget dui tempor dignissim. Facilisis auctor venenatis varius nunc, congue erat ac. Cras fermentum
+      convallis quam.</p>
+    <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed
+      turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit.</p>
+  </div>
+
+  <div class="footer">
+    <a href="https://sendby.email">Powered by sendby.email</a>
+  </div>
 </body>
+
 </html>
